<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ui.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTittle"
        android:layout_width="146dp"
        android:layout_height="47dp"
        android:layout_marginHorizontal="106dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/text_tittle"
        android:textColor="@color/charcoal_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSubTittle"
        android:layout_width="272dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text_subtittle"
        android:textColor="@color/charcoal_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTittle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/img_email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:hint="@string/text_e_mail"
        android:textColorHint="@color/mat_charcoal_grey"
        android:textSize="17sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/charcoal_grey"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/layoutEdtPassword"
        app:layout_constraintEnd_toEndOf="@id/txtSubTittle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/txtSubTittle"
        app:layout_constraintTop_toBottomOf="@id/txtSubTittle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/txtSubTittle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/txtSubTittle"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:passwordToggleContentDescription="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/img_password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/text_senha"
            android:textColorHint="@color/mat_charcoal_grey"
            android:textSize="17sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/charcoal_grey"
            android:drawableEnd="@drawable/img_eye">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/text_entrar"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:background="@drawable/background_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/txtSubTittle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/txtSubTittle"
        app:layout_constraintTop_toBottomOf="@id/layoutEdtPassword" />

    <View
        android:id="@+id/viewLoading"
        android:background="@color/mat_white"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="viewLoading,progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>